# mini-kv

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
protocal/: Cargo.toml  build.rs
protocal/protos/abi/: abi.proto
protocal/src/pb/: abi.rs
protocol/: Cargo.toml
protocol/protos/abi/: abi.proto
protocol/src/: helper.rs  lib.rs
protocol/src/pb/: abi.rs
server/: Cargo.toml
server/src/: main.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/command/: command.rs  mod.rs
service/src/error/: mod.rs
service/src/storage/: memory.rs  mod.rs
