[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }
protocol = { path = "../protocol" }
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
anyhow = "1.0.75"
async-prost = "0.3.0"
tracing = "0.1.40"
futures = "0.3.29"
